--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,12 +11,12 @@
   <script src="lib/jasmine-2.2.0/jasmine-html.js"></script>
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
-  <!-- include source files here... -->
+  <!-- include source files here... all the application code-->
   <script src="src/Player.js"></script>
   <script src="src/Song.js"></script>
 
 
-  <!-- include spec files here... -->
+  <!-- include spec files here...  all the tests-->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
 
